[project]
name = "reimagine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.19.0",
    "jinja2>=3.1.6",
    "litellm>=1.69.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "replicate>=1.0.7",
]
